--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,19 @@
+blobfile==3.0.0
 click==8.1.7
-numpy==1.26.4
-Pillow==10.3.0
+cm==0.1a2
+dill==0.3.8
+ftfy==6.3.1
+lpips==0.1.4
+numpy==2.2.0
+Pillow==10.0.1
+Pillow==11.0.0
+piq==0.8.0
+psutil==5.9.0
+pyspng==0.1.1
+regex==2024.4.28
 Requests==2.32.3
-torch_utils==0.1.2
+scipy==1.14.1
+setuptools==68.0.0
+tensorflow==2.18.0
+timm==0.5.4
 tqdm==4.65.0
-charset-normalizer
